@@ -62,28 +62,15 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 545)
-(Parent-Version lpmud 3-3 544)
+(Project-Version lpmud 3-3 546)
+(Parent-Version lpmud 3-3 545)
 (Version-Log "
-  - (comm.c, pkg-mccp) A MCCP connection can now be terminated by force from
-       the driver.
-  - (comm.c, gcollect.c ) USE_PTHREADS: The memory allocations/deallocations
-       for the background thread are done using malloc()/free().
-  - (configure, smalloc.c) USE_PTHREADS: With threads, smalloc no longer
-       attempts to replace malloc() and friends. This way we can
-       use smalloc() for main-thread allocations, and fall back on system
-       malloc() for sub-thread allocations. In extension, smalloc is again
-       the default allocator even if pthreads are enabled.
-  - (configure) If pthreads are not requested, don't add the lib to
-       link (but still check if it's available).
-  - (simul_efun, main.c, interpret.c) Corrected the re-load of the simul
-       efun object so that returning 0 from master::get_simul_efun() again
-       signals working without such an object.
+  - (comm.c, simul_efun.c) Corrected compilation errors (thanks, Ralph!)
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Thu, 13 May 2004 22:54:44 -0600")
+(Checkin-Time "Fri, 14 May 2004 06:43:03 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -121,7 +108,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.608 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.609 644))
   (HISTORY (lpmud/f/49_HISTORY 1.352 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -190,7 +177,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.18 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.80 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.81 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.40 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -280,7 +267,7 @@
   (src/pkg-alists.c (lpmud/l/38_pkg-alists 1.9 644))
   (src/pkg-alists.h (lpmud/l/39_pkg-alists 1.3 644))
   (src/pkg-mccp.h (lpmud/d/b/48_pkg-mccp.h 1.2 644))
-  (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.6 644))
+  (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.7 644))
   (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.21 644))
   (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.5 644))
   (src/pkg-odbc.h (lpmud/e/b/43_pkg-odbc.h 1.1 644))
@@ -305,7 +292,7 @@
   (src/sha1.h (lpmud/t/b/33_sha1.h 1.2 644))
   (src/sha1.c (lpmud/t/b/34_sha1.c 1.2 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.6 644))
-  (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.6 644))
+  (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.7 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.33 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.123 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
